--- a/Vue/1.从零学习Vue3.md
+++ b/Vue/1.从零学习Vue3.md
@@ -193,7 +193,7 @@ function changeFirstGame() {
 
 #### 2.4 reactive
 
-- `reactive`用来定义对象类型的响应式数据，语法`let a = reactive({})`
+- `reactive`用来定义对象类型的响应式数据，语法`let a = reactive()`
 - `reactive`只能用来定义对象类型的响应式数据，定义基本类型的响应式数据会报错
 
 ```typescript
@@ -395,7 +395,7 @@ let lastName = ref('san')
 
 // 这么定义的fullName是一个计算属性，且是只读的
 // let fullName = computed(() => {
-//   return firstName.value.slice(0, 1).toUpperCase() + firstName.value.slice(1) + '-' + lastName
+//   return firstName.value.slice(0, 1).toUpperCase() + firstName.value.slice(1) + '-' + lastName.value
 // })
 
 // 这么定义的fullName是一个计算属性，可读可写
@@ -822,7 +822,7 @@ export type Persons = PersonInter[];
 // export type Persons = Array<PersonInter>;
 ```
 
-```typescript
+```vue
 <template>
 	<!-- html -->
 	<Person :persons="persons" />
@@ -841,7 +841,7 @@ let persons = reactive<Persons>([
 </script>
 ```
 
-```typescript
+```vue
 <template>
 	<div class="person">
 		<ul>
@@ -897,7 +897,7 @@ withDefaults(defineProps<{ persons?: Persons }>(), {
 - 常用的生命周期钩子：`onMounted`、`onUpdated`和`onBeforeUnmount`
 - 需要注意的是`Vue`的加载顺序是先从子组件开始加载，最后加载`App.vue`
 
-```typescript
+```vue
 <template>
   <div class="person">
     <h2>当前求和为：{{ sum }}</h2>
@@ -981,7 +981,7 @@ export default function () {
 - `useDog.ts`
 
 ```typescript
-import { reactive } from "vue";
+import { onMounted, reactive } from "vue";
 import axios from "axios";
 
 export default function () {
@@ -1002,6 +1002,10 @@ export default function () {
 		}
 	}
 
+	onMounted(() => {
+		getDog();
+	});
+
 	// 向外部提供东西
 	return { dogList, getDog };
 }
@@ -1009,7 +1013,7 @@ export default function () {
 
 - `Person`
 
-```typescript
+```vue
 <template>
   <div class="person">
     <h2>当前求和为：{{ sum }} ，放大10倍后的值：{{ bigSum }}</h2>
@@ -1029,5 +1033,526 @@ const { dogList, getDog } = useDog()
 </script>
 ```
 
+### 3. 路由
 
+#### 3.1 什么是路由
+
+在`单页面应用`中，客户端的 JavaScript 可以拦截页面的跳转请求，动态获取新的数据，然后在无需重新加载的情况下更新当前页面。这样通常可以带来更顺滑的用户体验，尤其是在更偏向“应用”的场景下，因为这类场景下用户通常会在很长的一段时间中做出多次交互。
+
+在这类单页应用中，“路由”是在客户端执行的。一个客户端路由器的职责就是管理应用当前应该渲染的视图。
+
+#### 3.2 基本切换效果
+
+`Vue3`中要使用`	vue-router`的最新版本，目前是`4`版本。
+
+- 路由配置代码
+
+```typescript
+// 创建一个路由器，并暴露出去
+
+// 第一步：引入createRouter
+import { createRouter, createWebHistory } from "vue-router";
+// 引入一个一个要呈现的组件
+import Home from "@/components/Home.vue";
+import News from "@/components/News.vue";
+
+// 第二步：创建路由器
+const router = createRouter({
+	// 路由器的工作模式
+	history: createWebHistory(),
+	// 路由规则
+	routes: [
+		{
+			path: "/home",
+			component: Home,
+		},
+		{
+			path: "/news",
+			component: News,
+		},
+		{
+			path: "/about",
+			component: () => import("@/components/About.vue"),
+		},
+	],
+});
+
+// 暴露出去router
+export default router;
+```
+
+- `main.ts`
+
+```typescript
+// 引入creaeApp用于创建应用
+import { createApp } from "vue";
+// 引入App根组件
+import App from "./App.vue";
+// 引入路由器
+import router from "./router";
+
+// 创建一个应用
+const app = createApp(App);
+// 使用路由器
+app.use(router);
+// 挂载整个应用到app容器中
+app.mount("#app");
+```
+
+- `App.vue`
+
+```vue
+<template>
+  <div class="app">
+    <h2 class="title">Vue路由测试</h2>
+    <!-- 导航区 -->
+    <div class="navigation">
+      <RouterLink to="/home" active-class="active">首页</RouterLink>
+      <RouterLink to="/news" active-class="active">新闻</RouterLink>
+      <RouterLink to="/about" active-class="active">关于</RouterLink>
+    </div>
+    <!-- 展示区 -->
+    <div class="main-content">
+      <RouterView></RouterView>
+    </div>
+  </div>
+</template>
+
+<script lang="ts" setup name="App">
+import { RouterView, RouterLink } from 'vue-router';
+</script>
+```
+
+#### 3.3 工程化开发注意事项
+
+路由组件是路由规则渲染出来的页面，叫做路由组件。一般组件是指由用户自己编写的组件。
+
+- 路由组件通常放在`pages`或`views`文件夹，一般组件通常放在`components`文件夹。
+- 通常点击导航，视觉效果上“消失”了的路由组件，默认是被**卸载**掉的，需要的时候再去**挂载**。
+
+#### 3.4 路由器的工作模式
+
+##### 3.4.1 `history`模式
+
+优点：`URL`更加美观，不带有`#`，更接近于传统的网站`URL`
+
+缺点：后期项目上线，需要服务端配合处理路径问题，否则刷新会有`404`错误
+
+```typescript
+const router = createRouter({
+	history: createWebHistory(), //history模式
+	/******/
+})
+```
+
+##### 3.4.2 `hash`模式
+
+优点：兼容性更好，因为不需要服务端处理路径
+
+缺点：`URL`带有`#`不太美观，且在`SEO`优化方面相对较差
+
+```typescript
+const router = createRouter({
+	history: createWebHashHistory(), //hash模式
+	/******/
+})
+```
+
+##### 3.4.3 总结
+
+一般情况下面向客户的使用`history`模式，更加美观。面向服务端的，以稳为主，使用`hash`模式。
+
+#### 3.5 `to`的两种写法
+
+```vue
+<!-- 第一种：to的字符串写法 -->
+<RouterLink active-class="active" to="/home">主页</RouterLink>
+
+<!-- 第二种：to的对象写法 -->
+<RouterLink active-class="active" :to="{path: '/home'}">主页</RouterLink>
+<RouterLink active-class="active" :to="{name: 'zhuye'}">主页</RouterLink>
+```
+
+#### 3.6 命名路由
+
+作用：可以简化路由跳转及传参
+
+路由规则添加`name`进行命名：
+
+```typescript
+routes:[
+  {
+    name:'zhuye',
+    path:'/home',
+    component:Home
+  },
+  {
+    name:'xinwen',
+    path:'/news',
+    component:News,
+  },
+  {
+    name:'guanyu',
+    path:'/about',
+    component:About
+  }
+]
+```
+
+跳转路由：
+
+```vue
+<!--简化前：需要写完整的路径（to的字符串写法） -->
+<RouterLink to="/news/detail">跳转</RouterLink>
+
+<!--简化后：直接通过名字跳转（to的对象写法配合name属性） -->
+<RouterLink :to="{name: 'xiangqing'}">跳转</RouterLink>
+```
+
+#### 3.7 嵌套路由
+
+##### 3.7.1 `News`的子路由
+
+- 组件`Detail.vue`
+
+```vue
+<template>
+    <ul class="news-list">
+        <li>编号：xxx</li>
+        <li>标题：xxx</li>
+        <li>内容：xxx</li>
+    </ul>
+</template>
+
+<script lang="ts" setup name="Detail">
+</script>
+```
+
+##### 3.7.2 配置路由规则
+
+```typescript
+// 第二步：创建路由器
+const router = createRouter({
+	// 路由器的工作模式
+	history: createWebHistory(),
+	// 路由规则
+	routes: [
+		{
+			name: "zhuye",
+			path: "/home",
+			component: Home,
+		},
+		{
+			name: "xinwen",
+			path: "/news",
+			component: News,
+			children: [
+				{
+					name: "xiangqing",
+					path: "detail",
+					component: Detail,
+				},
+			],
+		},
+		{
+			name: "guanyu",
+			path: "/about",
+			component: () => import("@/pages/About.vue"),
+		},
+	],
+});
+
+// 暴露出去router
+export default router;
+```
+
+##### 3.7.3 跳转路由
+
+```vue
+<RouterLink to="/news/detail">跳转</RouterLink>
+<!-- 或 -->
+<RouterLink :to="{path: '/news/detail'}">跳转</RouterLink>
+```
+
+##### 3.7.4 展示区域
+
+```vue
+<template>
+    <div class="news">
+        <!-- 导航区 -->
+        <ul>
+            <li v-for="news in NewsList" :key="news.id">
+                <RouterLink :to="{
+                    // name: 'xiangqing',
+                    path: '/news/detail'}">
+                    {{ news.title }}
+                </RouterLink>
+            </li>
+        </ul>
+        <!-- 展示区  -->
+        <div class="news-content">
+            <RouterView></RouterView>
+        </div>
+    </div>
+</template>
+
+<script lang="ts" setup name="News">
+    import { reactive } from 'vue';
+    import { RouterView, RouterLink } from 'vue-router';
+
+    const NewsList = reactive([
+        { id: '001', title: '很好的抗癌食物', content: '西兰花' },
+        { id: '002', title: '如何一夜暴富', content: '买彩票' },
+        { id: '003', title: '如何拯救地球', content: '不知道' },
+        { id: '004', title: '你最喜欢的明星是谁？', content: '薛之谦' },
+        { id: '005', title: '你最想看的电视剧叫什么？', content: '我不喜欢电视剧' },
+        { id: '006', title: '震惊，斗破竟然出电视剧了', content: '斗破电视剧将于明日上映' }
+    ])
+</script>
+```
+
+#### 3.8 路由传参
+
+##### 3.8.1 `query`参数
+
+- 传递参数
+
+```vue
+<!-- 跳转并携带query参数（to的字符串写法） -->
+<RouterLink to="/news/detail?a=1&b=2&content=欢迎你">跳转</RouterLink>
+
+<RouterLink :to="`/news/detail?id=${news.id}&title=${news.title}&content=${news.content}`">{{ news.title }}</RouterLink>
+				
+<!-- 跳转并携带query参数（to的对象写法） -->
+<RouterLink :to="{
+    name: 'xiangqing',
+    // path: '/news/detail',
+    query: {
+        id: news.id,
+        title: news.title,
+        content: news.content
+    }
+}">
+    {{ news.title }}
+</RouterLink>
+```
+
+- 接收参数
+
+```vue
+<template>
+    <ul class="news-list">
+        <li>编号：{{ query.id }}</li>
+        <li>标题：{{ query.title }}</li>
+        <li>内容：{{ query.content }}</li>
+    </ul>
+</template>
+
+<script lang="ts" setup name="Detail">
+    import { toRefs } from 'vue';
+    import { useRoute } from 'vue-router';
+    const route = useRoute();
+    let { query } = toRefs(route);
+</script>
+```
+
+##### 3.8.2 `params`参数
+
+- 传递参数
+
+```vue
+<!-- 跳转并携带params参数（to的字符串写法） -->
+<RouterLink to="/news/detail/嘿嘿/哈哈/呵呵">跳转</RouterLink>
+
+<RouterLink :to="`/news/detail/${news.id}/${news.title}/${news.content}`">{{ news.title }}</RouterLink>
+
+<!-- 跳转并携带params参数（to的对象写法） -->
+<RouterLink :to="{
+    name: 'xiangqing',
+    params: {
+        id: news.id,
+        title: news.title,
+        content: news.content
+    }
+}">
+    {{ news.title }}
+</RouterLink>
+```
+
+- 接收参数
+
+```vue
+<template>
+    <ul class="news-list">
+        <li>编号：{{ params.id }}</li>
+        <li>标题：{{ params.title }}</li>
+        <li>内容：{{ params.content }}</li>
+    </ul>
+</template>
+
+<script lang="ts" setup name="Detail">
+    import { toRefs } from 'vue';
+    import { useRoute } from 'vue-router';
+    const route = useRoute();
+    const { params } = toRefs(route);
+</script>
+```
+
+- 路由规则
+
+```typescript
+// 第二步：创建路由器
+const router = createRouter({
+	// 路由器的工作模式
+	history: createWebHistory(),
+	// 路由规则
+	routes: [
+		{
+			name: "zhuye",
+			path: "/home",
+			component: Home,
+		},
+		{
+			name: "xinwen",
+			path: "/news",
+			component: News,
+			children: [
+				{
+					name: "xiangqing",
+          // ?配置参数的必要性，可传可不传
+					path: "detail/:id/:title/:content?",
+					component: Detail,
+				},
+			],
+		},
+		{
+			name: "guanyu",
+			path: "/about",
+			component: () => import("@/pages/About.vue"),
+		},
+	],
+});
+
+// 暴露出去router
+export default router;
+```
+
+需要注意的两点就是：
+
+- 传递`params`参数时，若使用`to`的对象写法，必须使用`name`配置项，不能使用`path`配置项
+- 传递`params`参数时，需要提前在路由规则中占位
+
+#### 3.9 路由的`props`配置
+
+```typescript
+// 第二步：创建路由器
+const router = createRouter({
+	// 路由器的工作模式
+	history: createWebHistory(),
+	// 路由规则
+	routes: [
+		{
+			name: "zhuye",
+			path: "/home",
+			component: Home,
+		},
+		{
+			name: "xinwen",
+			path: "/news",
+			component: News,
+			children: [
+				{
+					name: "xiangqing",
+					path: "detail/:id/:title/:content?",
+					component: Detail,
+					// 第一种写法：将路由收到的所有params参数作为props传给路由组件
+					props: true,
+
+					// 第二种写法：函数写法，自己决定将什么作为props传给路由组件（一般用于query参数）
+					// props(route) {
+					// 	return route.query;
+					// },
+
+					// 第三种写法：对象写法，自己决定将什么作为props传给路由组件
+					// props: {
+					// 	id: 123,
+					// 	title: "标题",
+					// 	content: "内容",
+					// },
+				},
+			],
+		},
+		{
+			name: "guanyu",
+			path: "/about",
+			component: () => import("@/pages/About.vue"),
+		},
+	],
+});
+
+// 暴露出去router
+export default router;
+```
+
+- 获取配置的`props`参数
+
+```vue
+<template>
+    <ul class="news-list">
+        <li>编号：{{ id }}</li>
+        <li>标题：{{ title }}</li>
+        <li>内容：{{ content }}</li>
+    </ul>
+</template>
+
+<script lang="ts" setup name="Detail">
+    defineProps(['id', 'title', 'content'])
+</script>
+```
+
+#### 3.10 路由的`replace`属性
+
+- 作用：控制路由跳转时操作浏览器历史记录的模式
+- 浏览器的历史记录有两种写入模式：分别为`push`和`replace`
+  - `push`是追加历史记录（默认）
+  - `replace`是替换当前记录
+
+- 开启`replace`模式
+
+```vue
+<RouterLink replace .......>News</RouterLink>
+```
+
+#### 3.11 编程式导航
+
+编程式导航主要是为了实现某些特定情况下的路由跳转，可以在不使用`<RouterLink>`时也实现路由跳转。
+
+路由组件提供了两个很重要的属性：`$route`和`$router`,这两个属性本质上是两个`hooks`，分别为`useRoute`和`useRouter`。
+
+```typescript
+import {useRoute,useRouter} from 'vue-router'
+
+const route = useRoute()
+const router = useRouter()
+
+console.log(route.query)
+console.log(route.parmas)
+console.log(router.push)
+console.log(router.replace)
+```
+
+- `useRouter`：获取路由器，可以使用`push`和`replace`属性进行路由跳转
+- `useRoute`：获取路由，里面包含了通过路由传递的参数等信息
+- `push`和`replace`：跳转时的参数完全参考`RouterLink`中`to`的写法
+
+#### 3.12 重定向
+
+将特定的路径，重新定向到已有路由地址。
+
+```typescript
+{
+    path: '/',
+    redirect: '/home'
+}
+```
 
