--- a/Vue/1.从零学习Vue3.md
+++ b/Vue/1.从零学习Vue3.md
@@ -1556,3 +1556,445 @@ console.log(router.replace)
 }
 ```
 
+### 4. pinia
+
+#### 4.1 环境准备
+
+- `App.vue`
+
+```vue
+<template>
+  <Count />
+  <br>
+  <LoveTalk />
+</template>
+
+<script lang="ts" setup name="App">
+  import Count from '@/components/Count.vue'
+  import LoveTalk from '@/components/LoveTalk.vue'
+</script>
+```
+
+- `Count.vue`
+
+```vue
+<template>
+    <div class="count">
+        <h2>当前求和为：{{ sum }}</h2>
+        <select v-model.number="n">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+        <button @click="add">加</button>
+        <button @click="minus">减</button>
+
+    </div>
+</template>
+
+<script setup lang="ts" name="Count">
+    import { ref } from 'vue'
+
+    // 数据
+    // 当前求和
+    let sum = ref(0)
+    // 用户选择的数字
+    let n = ref(1)
+
+    // 方法
+    function add() {
+        sum.value += n.value
+    }
+    function minus() {
+        sum.value -= n.value
+    }
+</script>
+```
+
+- `LoveTalk.vue`
+
+```vue
+<template>
+    <div class="talk">
+        <button @click="getLoveTalk">获取一句土味情话</button>
+        <ul>
+            <li v-for="talk in talkList" :key="talk.id">{{ talk.title }}</li>
+        </ul>
+    </div>
+</template>
+
+<script setup lange="ts" name="LoveTalk">
+    import { reactive } from 'vue'
+    import axios from "axios";
+    import { nanoid } from "nanoid";
+
+    let talkList = reactive([
+        { id: 'fafsad01', title: '你今天有点怪，哪里怪？怪好看的！' },
+        { id: 'fafsad02', title: '草莓、蓝莓、蔓越莓，你想我了没？' },
+        { id: 'fafsad03', title: '心里给你留了一块地，我的死心塌地。' }
+    ])
+
+    async function getLoveTalk() {
+        // 发送请求，下面的写法是连续解构赋值+重命名
+        let { data: { content: title } } = await axios.get('https://api.uomg.com/api/rand.qinghua?format=json')
+        // 把请求回来的字符串，包装成一个对象
+        let obj = { id: nanoid(), title }
+        // 放到数组中
+        talkList.unshift(obj)
+    }
+</script>
+```
+
+#### 4.2 搭建pinia环境
+
+- 安装`pinia`：`npm install pinia`
+- 引入`pinia`
+
+```typescript
+// 引入creaeApp用于创建应用
+import { createApp } from "vue";
+// 引入App根组件
+import App from "./App.vue";
+
+// 引入createPinia，用于创建pinia
+import { createPinia } from "pinia";
+
+// 创建pinia
+const pinia = createPinia();
+
+// 创建一个应用
+const app = createApp(App);
+
+// 使用pinia
+app.use(pinia);
+
+// 挂载整个应用到app容器中
+app.mount("#app");
+```
+
+![](https://yanko24-note.oss-cn-zhangjiakou.aliyuncs.com/vue/vue-pinia-start.png)
+
+#### 4.3 存储和读取数据
+
+- `Store`是一个保存**状态**、**业务逻辑**的实体，每个组件都可以**读取**、**写入**它。
+- `Store`有三个概念：`state`、`getters`、`actions`，相当于组件中的`data`、`computed`、`methods`。
+
+- `count.ts`
+
+```typescript
+import { defineStore } from "pinia";
+
+export const useCountStore = defineStore("count", {
+	// actions里面放置的是一个一个的方法，用于响应组件中的“动作“
+	actions: {
+		increment(value: number) {
+			console.log("increment被调用了！", value);
+			if (this.sum < 10) {
+				// 修改数据（this是当前的store）
+				this.sum += value;
+			}
+		},
+	},
+	// 真正存储数据的地方
+	state() {
+		return {
+			sum: 6,
+		};
+	},
+    // 计算
+    getters: {}
+});
+```
+
+- 组件中使用`state`中的数据
+
+```vue
+<template>
+    <div class="count">
+        <h2>当前求和为：{{ countStore.sum }}</h2>
+        <select v-model.number="n">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+        <button @click="add">加</button>
+        <button @click="minus">减</button>
+
+    </div>
+</template>
+
+<script setup lang="ts" name="Count">
+    import { ref } from 'vue'
+    // 引入useCountStore
+    import { useCountStore } from "@/store/count";
+
+    // 使用useCountStore，得到一个专门保存count相关的store
+    const countStore = useCountStore()
+</script>
+```
+
+#### 4.4 修改数据
+
+##### 4.4.1 直接修改数据
+
+```typescript
+<template>
+    <div class="count">
+        <h2>当前求和为：{{ countStore.sum }}</h2>
+        <select v-model.number="n">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+        <button @click="add">加</button>
+        <button @click="minus">减</button>
+
+    </div>
+</template>
+
+<script setup lang="ts" name="Count">
+    import { ref } from 'vue'
+    // 引入useCountStore
+    import { useCountStore } from "@/store/count";
+
+    // 使用useCountStore，得到一个专门保存count相关的store
+    const countStore = useCountStore()
+
+    // 以下两种方式都可以拿到state中的书
+    // console.log('@@@', countStore.sum)
+    // console.log('@@@', countStore.$state.sum)
+
+    // 数据
+    // 用户选择的数字
+    let n = ref(1)
+
+    // 方法
+    function add() {
+        // 修改pinia中数据的方式
+        countStore.sum += n.value
+    }
+    function minus() {
+        countStore.sum -= n.value
+    }
+</script>
+```
+
+##### 4.4.2 批量修改
+
+```typescript
+<template>
+    <div class="count">
+        <h2>当前求和为：{{ countStore.$state.sum }}</h2>
+        <select v-model.number="n">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+        <button @click="add">加</button>
+        <button @click="minus">减</button>
+
+    </div>
+</template>
+
+<script setup lang="ts" name="Count">
+    import { ref } from 'vue'
+    // 引入useCountStore
+    import { useCountStore } from "@/store/count";
+
+    // 使用useCountStore，得到一个专门保存count相关的store
+    const countStore = useCountStore()
+
+    // 以下两种方式都可以拿到state中的书
+    // console.log('@@@', countStore.sum)
+    // console.log('@@@', countStore.$state.sum)
+
+    // 数据
+    // 用户选择的数字
+    let n = ref(1)
+
+    // 方法
+    function add() {
+        // 修改pinia中数据的方式
+        // countStore.sum += n.value
+
+        // 批量修改
+        countStore.$patch({
+            sum: countStore.sum += n.value
+        })
+    }
+</script>
+```
+
+##### 4.4.3 借助`action`修改数据
+
+```typescript
+import { defineStore } from "pinia";
+
+export const useCountStore = defineStore("count", {
+	// actions里面放置的是一个一个的方法，用于响应组件中的“动作“
+	actions: {
+        // 加
+		increment(value: number) {
+			console.log("increment被调用了！", value);
+			if (this.sum < 10) {
+				// 修改数据（this是当前的store）
+				this.sum += value;
+			}
+		},
+	}
+});
+```
+
+组件中调用`action`即可：
+
+```vue
+<template>
+    <div class="count">
+        <h2>当前求和为：{{ countStore.sum }}</h2>
+        <select v-model.number="n">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+        <button @click="add">加</button>
+        <button @click="minus">减</button>
+
+    </div>
+</template>
+
+<script setup lang="ts" name="Count">
+    import { ref } from 'vue'
+    // 引入useCountStore
+    import { useCountStore } from "@/store/count";
+
+    // 使用useCountStore，得到一个专门保存count相关的store
+    const countStore = useCountStore()
+
+    // 以下两种方式都可以拿到state中的书
+    // console.log('@@@', countStore.sum)
+    // console.log('@@@', countStore.$state.sum)
+
+    // 数据
+    // 用户选择的数字
+    let n = ref(1)
+
+    // 方法
+    function add() {
+        // 修改pinia中数据的方式
+        countStore.increment(n.value)
+    }
+</script>
+```
+
+#### 4.5 `storeToRefs`
+
+借助`storeToRefs`将`store`中的数据转为`ref`对象，方便在模板中使用。需要注意的是：`pinia`提供的`storeToRefs`只会将数据进行转换，而`Vue`的`toRefs`会转换`store`中所有数据。
+
+```vue
+<template>
+    <div class="count">
+        <h2>当前求和为：{{ sum }}</h2>
+    </div>
+</template>
+
+<script setup lang="ts" name="Count">
+    // 引入useCountStore
+    import { useCountStore } from "@/store/count";
+    // 引入storeToRefs
+    import { storeToRefs } from 'pinia';
+
+    // 使用useCountStore，得到一个专门保存count相关的store
+    const countStore = useCountStore()
+    // 使用storeToRefs转换useCountStore，随后解构
+    const { sum } = storeToRefs(countStore)
+</script>
+```
+
+#### 4.6 `getters`
+
+当`state`中的数据，需要经过处理后再使用时，就可以使用`getters`配置
+
+- 在`ts`中追加`getters`配置。
+
+```typescript
+import { defineStore } from "pinia";
+
+export const useCountStore = defineStore("count", {
+	// actions里面放置的是一个一个的方法，用于响应组件中的“动作“
+	actions: {
+		// 方法/动作
+		increment(value: number) {
+			console.log("increment被调用了！", value);
+			if (this.sum < 10) {
+				// 修改数据（this是当前的store）
+				this.sum += value;
+			}
+		},
+	},
+	// 真正存储数据的地方，状态
+	state() {
+		return {
+			sum: 1,
+			school: "test",
+		};
+	},
+    // 计算
+	getters: {
+		bigSum: (state) => state.sum * 10,
+		upperSchool(state): string {
+			return state.school.toUpperCase();
+		},
+	},
+});
+```
+
+- 组件中读取数据
+
+```typescript
+const { increment } = countStore
+let { sum, school, bigSum, upperSchool } = storeToRefs(countStore)
+```
+
+#### 4.7 `$subscribe`
+
+通过`store`的`$subscribe()`方法侦听`state`及其变化
+
+```typescript
+loveTalkStore.$subscribe((mutate, state) => {
+    console.log('loveTalk', mutate, state)
+    localStorage.setItem('talkList', JSON.stringify(state.talkList))
+})
+```
+
+#### 4.8 `store`组合式写法
+
+```typescript
+import { defineStore } from "pinia";
+import axios from "axios";
+import { nanoid } from "nanoid";
+import { reactive } from "vue";
+
+export const useLoveTalkStore = defineStore("loveTalk", () => {
+	// talkList就是state
+	const talkList = reactive(
+		JSON.parse(localStorage.getItem("talkList") as string) || []
+	);
+
+	// getATalk函数相当于action
+	async function getATalk() {
+		// 发送请求，下面的写法是连续解构赋值+重命名
+		let {
+			data: { content: title },
+		} = await axios.get("https://api.uomg.com/api/rand.qinghua?format=json");
+		// 把请求回来的字符串，包装成一个对象
+		let obj = { id: nanoid(), title };
+		// 放到数组中
+		talkList.unshift(obj);
+	}
+
+	return { talkList, getATalk };
+});
+```
+
+### 5. 组件通信
+
